# ChangeLog for app-office/libreoffice-bin
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-office/cvs-repo/gentoo-x86/app-office/libreoffice-bin/ChangeLog,v 1.39 2011/10/23 09:39:44 scarabeus Exp $

  23 Oct 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  libreoffice-bin-3.4.3.2-r1.ebuild:
  Add binaries for x86 too.

  22 Oct 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  libreoffice-bin-3.4.3.2-r1.ebuild:
  Move the sources under amd64 dir so we prepare for other arches.

  19 Oct 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  libreoffice-bin-3.4.3.2-r1.ebuild:
  Fix the gcc checking to avoid bug 387515.

  19 Oct 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  libreoffice-bin-3.4.3.2-r1.ebuild:
  Proper blocker. Wrt. #387605.

*libreoffice-bin-3.4.3.2-r1 (17 Oct 2011)

  17 Oct 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  +libreoffice-bin-3.4.3.2-r1.ebuild:
  Add the gentoo built version (for now just amd64)

*libreoffice-bin-3.4.3-r2 (03 Sep 2011)

  03 Sep 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  -libreoffice-bin-3.4.3-r1.ebuild, +libreoffice-bin-3.4.3-r2.ebuild:
  Solve the collision with split -l10n package here by revbump and in -l10n by
  blocker.

  03 Sep 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  libreoffice-bin-3.4.3-r1.ebuild:
  Depend on split libreoffice-l10n package instead of installing the languages
  here.

*libreoffice-bin-3.4.3-r1 (02 Sep 2011)

  02 Sep 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  libreoffice-bin-3.3.4.ebuild, -libreoffice-bin-3.4.3.ebuild,
  +libreoffice-bin-3.4.3-r1.ebuild:
  Add symlink to unopkg to bin. Fixes bug #381009.

  01 Sep 2011; Justin Lecher <jlec@gentoo.org> libreoffice-bin-3.4.3.ebuild,
  metadata.xml:
  Added -f to rm in src_install to fix installation as non root on prefix

*libreoffice-bin-3.4.3 (31 Aug 2011)

  31 Aug 2011; Andreas Proschofsky <suka@gentoo.org>
  -libreoffice-bin-3.4.2.ebuild, +libreoffice-bin-3.4.3.ebuild: