@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-office/cvs-repo/gentoo-x86/app-office/libreoffice-bin/Attic/libreoffice-bin-3.4.3.2-r1.ebuild,v 1.5 2011/10/23 09:39:44 scarabeus Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-office/cvs-repo/gentoo-x86/app-office/libreoffice-bin/Attic/libreoffice-bin-3.4.3.2-r1.ebuild,v 1.6 2011/10/26 15:47:59 chainsaw Exp $
 
 EAPI=4
 
@@ -51,7 +51,7 @@ SRC_URI="
 IUSE="gnome java kde"
 LICENSE="LGPL-3"
 SLOT="0"
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="amd64 ~x86"
 
 COMMON_DEPEND="
 	app-arch/zip
