@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-office/cvs-repo/gentoo-x86/app-office/libreoffice/Attic/libreoffice-3.4.3.2-r1.ebuild,v 1.11 2011/10/16 14:12:14 scarabeus Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-office/cvs-repo/gentoo-x86/app-office/libreoffice/Attic/libreoffice-3.4.3.2-r1.ebuild,v 1.12 2011/10/26 15:45:28 chainsaw Exp $
 
 EAPI=3
 
@@ -105,7 +105,7 @@ gstreamer gtk kde ldap mysql nsplugin odk opengl python templates test +vba
 webdav"
 LICENSE="LGPL-3"
 SLOT="0"
-[[ ${PV} == *9999* ]] || KEYWORDS="~amd64 ~ppc ~x86 ~amd64-linux ~x86-linux"
+[[ ${PV} == *9999* ]] || KEYWORDS="amd64 ~ppc ~x86 ~amd64-linux ~x86-linux"
 
 # lingua for templates
 LANGUAGES="de en_GB en_ZA es fr hu it"
