@@ -1,6 +1,11 @@
 # ChangeLog for app-office/libreoffice-bin
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-office/cvs-repo/gentoo-x86/app-office/libreoffice-bin/ChangeLog,v 1.39 2011/10/23 09:39:44 scarabeus Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-office/cvs-repo/gentoo-x86/app-office/libreoffice-bin/ChangeLog,v 1.40 2011/10/26 15:47:59 chainsaw Exp $
+
+  26 Oct 2011; Tony Vroon <chainsaw@gentoo.org>
+  libreoffice-bin-3.4.3.2-r1.ebuild:
+  Marked stable on AMD64 based on arch testing by Ian "idella4" Delaney &
+  Agostino "ago" Sarubbo in bug #387187.
 
   23 Oct 2011; Tomáš Chvátal <scarabeus@gentoo.org>
   libreoffice-bin-3.4.3.2-r1.ebuild:
